--- a/source/index_en.html
+++ b/source/index_en.html
@@ -101,9 +101,9 @@
 					  <tr>
 						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_2.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 						  <td width="14" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_3.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_4.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 						  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_1.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_6.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 					  </tr>
 					  <tr>
 					    <td valign="top" align="left" bgcolor="#ffdddc" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -125,47 +125,36 @@ VND 18 million daily</td>
 						  </tr>
 							</table></td>
 					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-					    <td valign="top" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+					    <td valign="top" align="left" bgcolor="#eee1f8" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 250,000</strong> <strong>off</strong><br />
-on bill from<br />
-VND 2 million on 13/2</td>
-						  </tr>
-							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
-						  </tr>
-							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 100,000</strong> <strong>off</strong><br />
-on bill from<br />
-VND 1 million weekly<br />
-on Friday & Saturday</td>
-						  </tr>
-							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
-						  </tr>
-							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 500,000</strong> <strong>off</strong><br />
-on TikiPro bill from<br />
-VND 10 million daily</td>
+							  <td valign="top" align="center" style="margin: 0; padding: 0 10px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong>Save</strong> <strong style="font-size: 20px; color: #db0011;">VND 10,000</strong><br />
+for any Contactless purchase at all Starbucks stores</td>
 						  </tr>
 							<tr>
 							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
 						  </tr>
 							</table></td>
 					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-					    <td valign="top" align="left" bgcolor="#eee1f8" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+					    <td valign="top" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 50,000</strong> <strong>off</strong><br />
-on bill from<br />
-VND 500,000 daily</td>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">25%</strong> <strong>off</strong> on bill from<br />
+VND 1,000,000 to<br />
+VND 3,000,000<sup style="font-size: 12px;">(*)</sup> daily</td>
 						  </tr>
 							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
 						  </tr>
 							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 25,000</strong> <strong>off</strong><br />
-<strong>on delivery fee</strong><br />
-(bill from VND 300,000)</td>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">25%</strong> <strong>off</strong> on bill<br />
+						      value above<br />
+						      VND 3,000,000 daily</td>
+						  </tr>
+							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
+						  </tr>
+							  <tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.1;"><sup style="font-size: 11px">(*)</sup>Applicable for<br />
+							    Visa Platinum card only</td>
 						  </tr>
 							<tr>
 							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
@@ -184,14 +173,33 @@ VND 500,000 daily</td>
                 <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
 				  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 					  <tr>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_5.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_1.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 						  <td width="14" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_6.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_5.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 						  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_4.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_3.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 					  </tr>
 					  <tr>
-					    <td valign="top" align="left" bgcolor="#eee1f8" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+						  <td valign="top" align="left" bgcolor="#eee1f8" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 50,000</strong> <strong>off</strong><br />
+on bill from<br />
+VND 500,000 daily</td>
+						  </tr>
+							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
+						  </tr>
+							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 25,000</strong> <strong>off</strong><br />
+<strong>on delivery fee</strong><br />
+(bill from VND 300,000)</td>
+						  </tr>
+							<tr>
+							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
+						  </tr>
+							</table></td>
+					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
+						  <td valign="top" align="left" bgcolor="#eee1f8" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 30,000</strong> <strong>off</strong><br />
 on bill from<br />
@@ -210,32 +218,20 @@ VND 499,000 daily</td>
 						  </tr>
 							</table></td>
 					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-					    <td valign="top" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+						  <td valign="top" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 50,000</strong> <strong>off</strong><br />
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 100,000</strong> <strong>off</strong><br />
 on bill from<br />
-VND 599,000 daily</td>
+VND 1,000,000 weekly<br />
+on Friday & Saturday</td>
 						  </tr>
 							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
 						  </tr>
 							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 30,000</strong> <strong>off</strong><br />
-on Sendo Farm bill<br />
-from VND 200,000</td>
-						  </tr>
-							<tr>
-							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
-						  </tr>
-							</table></td>
-					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-					    <td valign="top" align="left" bgcolor="#eee1f8" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 500,000</strong> <strong>off</strong><br />
-on bill from<br />
-VND 8 million daily<br />
-for Cao Phong's<br />
-products</td>
+on TikiPro bill from<br />
+VND 10,000,000 daily</td>
 						  </tr>
 							<tr>
 							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
