--- a/source/index_en.html
+++ b/source/index_en.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Enjoy sweet Valentine’s Day!</title>
+<title>Make March 8 a memorable day special deals of up to VND 600.000 off from HSBC</title>
 <style type="text/css">
 .chs_body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Up to VND 600,000 off from HSBC will complete your memorable Valentine’s Day!</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Sending love to the women in your life</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0 auto; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
   <tr>
     <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><!--START HEADER VI -->
@@ -77,13 +77,14 @@
                     </tr>
                     <tr>
                       <td valign="top" style="padding-top:0px; font-size: 35px; color: #000000; line-height: 40px;font-family: Arial, Helvetica, sans-serif"
-                                  align="left">Sweet surprise for a perfect Valentine's Day!</td>
+                                  align="left">Spell it out this<br />
+                      International Woman's day</td>
                     </tr>
                     <tr>
                       <td height="28" valign="top" align="left" style="padding-top: 0px">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">It is not only words that express your sincere love for your loved one! This Valentine’s Day, let’s take advantage of attractive offers of up to VND 600,000 off on jewelry, technology, and online shopping to prepare for the perfect gift!</td>
+                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">On occasion of International Woman&rsquo;s day, let HSBC accompany you to show your beloved women how much they mean to you with a range of offers of up to VND 6000.000 discount on jewelry, dining and online shopping.</td>
                     </tr>
 					<tr>
                       <td height="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
@@ -101,9 +102,9 @@
 					  <tr>
 						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_2.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 						  <td width="14" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_4.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/en_VN/visa-offers-and-perks/starbucks/150965" target="_blank" title="This link may allow you to exit HSBC's website. HSBC assumes no liability or control for your using of this third-party website. Please refer to our Hyperlink Policy."><img src="image/chs_box_4.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 						  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://card.apply.hsbc.com.vn/daily-offers/shopping/en" target="_blank"><img src="image/chs_box_6.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
+						  <td width="187" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/en_vn/visa-offers-and-perks/visa-vietnam-affluent-dining-program/150566" target="_blank" title="This link may allow you to exit HSBC's website. HSBC assumes no liability or control for your using of this third-party website. Please refer to our Hyperlink Policy."><img src="image/chs_box_6.jpg" width="187" height="auto" alt="" style="display:block"/></a></td>
 					  </tr>
 					  <tr>
 					    <td valign="top" align="left" bgcolor="#ffdddc" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
