--- a/source/index_en.html
+++ b/source/index_en.html
@@ -78,13 +78,13 @@
                     <tr>
                       <td valign="top" style="padding-top:0px; font-size: 35px; color: #000000; line-height: 40px;font-family: Arial, Helvetica, sans-serif"
                                   align="left">Spell it out this<br />
-                      International Woman's day</td>
+                      International Women's Day</td>
                     </tr>
                     <tr>
                       <td height="28" valign="top" align="left" style="padding-top: 0px">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">On occasion of International Woman&rsquo;s day, let HSBC accompany you to show your beloved women how much they mean to you with a range of offers of up to VND 6000.000 discount on jewelry, dining and online shopping.</td>
+                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">On the occasion of International Women's Day, let HSBC accompany you to show your beloved women how much they mean to you with a range of offers of up to VND 6,000,000 discount on jewelry, dining and online shopping.</td>
                     </tr>
 					<tr>
                       <td height="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
@@ -111,7 +111,7 @@
 							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 200,000</strong> <strong>off</strong><br />
 on bill from<br />
-VND 6 million daily</td>
+VND 6,000,000 daily</td>
 						  </tr>
 							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
@@ -119,7 +119,7 @@ VND 6 million daily</td>
 							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">VND 600,000</strong> <strong>off</strong><br />
 on bill from<br />
-VND 18 million daily</td>
+VND 18,000,000 daily</td>
 						  </tr>
 							<tr>
 							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
@@ -146,7 +146,7 @@ VND 3,000,000<sup style="font-size: 12px;">(*)</sup> daily</td>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
 						  </tr>
 							<tr>
-							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">25%</strong> <strong>off</strong> on bill<br />
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">50%</strong> <strong>off</strong> on bill<br />
 						      value above<br />
 						      VND 3,000,000 daily</td>
 						  </tr>
@@ -155,7 +155,7 @@ VND 3,000,000<sup style="font-size: 12px;">(*)</sup> daily</td>
 						  </tr>
 							  <tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.1;"><sup style="font-size: 11px">(*)</sup>Applicable for<br />
-							    Visa Platinum card only</td>
+							    Visa Platinum Card only</td>
 						  </tr>
 							<tr>
 							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
