--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -159,7 +159,7 @@ cho hóa đơn từ<br />
 						  </tr>
 							  <tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.1;"><sup style="font-size: 11px">(*)</sup>Ưu đãi áp dụng cho<br />
-							    chủ thẻ Bạch Kim</td>
+							    Chủ Thẻ Bạch Kim</td>
 						  </tr>
 							<tr>
 							  <td height="28" valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
