--- a/source/index_en.html
+++ b/source/index_en.html
@@ -138,6 +138,12 @@ for any Contactless purchase at all Starbucks stores</td>
 					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
 					    <td valign="top" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong>Visa Vietnam Affluent Dining Program</strong></td>
+						  </tr>
+							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
+						  </tr>
+							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong style="font-size: 20px; color: #db0011;">25%</strong> <strong>off</strong> on bill from<br />
 VND 1,000,000 to<br />
 VND 3,000,000<sup style="font-size: 12px;">(*)</sup> daily</td>
