--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -142,6 +142,14 @@ Starbucks</td>
 					    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
 					    <td valign="top" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border-left: 1px solid #da0011; border-bottom: 1px solid #da0011; border-right: 1px solid #da0011; border-radius: 0 0 10px 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong>Đặc quyền ẩm thực<br />
+						      cao cấp từ<br />
+						      Visa Việt Nam</strong></td>
+						  </tr>
+							<tr>
+							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;">&nbsp;</td>
+						  </tr>
+							<tr>
 							  <td valign="top" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1;"><strong>Giảm</strong> <strong style="font-size: 20px; color: #db0011;">25%</strong><br />
 cho hóa đơn từ<br />
 						      1.000.000 VND - 3.000.000 VND</td>
